# myapp-template

./: CMakeLists.txt  LICENSE  README.md  setup_package.iss
src/: CMakeLists.txt  create_update_ts2qm.bat  main.cpp  widget.cpp  widget.h  widget.ui
src/basics/: communication.cpp  communication.h  configjson.cpp  configjson.h  isingleton.h  xapphelper.cpp  xapphelper.h
src/network/version_updater/: versionupdater.cpp  versionupdater.h
src/resources/: languages_map.json  resources.qrc
src/resources/config/: xconfig.json
src/resources/cpack/: ldd.sh  tech.xmuli.myapp-template.desktop  tech.xmuli.myproject.desktop
src/translations/: en_us.ts  zh_cn.ts  zh_tw.ts
src/ui/main/: mainwin.cpp  mainwin.h  mainwin.ui
src/ui/setting/: settingnavui.cpp  settingnavui.h  settingnavui.ui  settingui.cpp  settingui.h  settingui.ui  sub_about.ui  sub_general.ui  sub_update.ui
src/ui/tray/: tray.cpp  tray.h
src/xwidgets/include/: licenseui.h
src/xwidgets/sources/: licenseui.cpp  licenseui.ui
tripartite/: README.md
tripartite/include/easyloggingpp/: easylogging++.h
tripartite/include/qt_aes/: qaesencryption.cpp  qaesencryption.h
